@@ -2,6 +2,10 @@
 # USAGE: write_bin_run_dosbox
 # CALLED BY: write_bin_run
 write_bin_run_dosbox() {
+	local image
+	local pkg
+	local pkg_path
+
 	cat >> "$file" <<- 'EOF'
 	# Run the game
 
@@ -13,9 +17,22 @@ write_bin_run_dosbox() {
 	if [ "$GAME_IMAGE" ]; then
 		case "$GAME_IMAGE_TYPE" in
 			('cdrom')
-				cat >> "$file" <<- EOF
-				mount d $GAME_IMAGE -t cdrom
-				EOF
+				for pkg in $PACKAGES_LIST; do
+					pkg_path="$(get_value "${pkg}_PATH")"
+					if [ -e "${pkg_path}$PATH_GAME/$GAME_IMAGE" ]; then
+						image="${pkg_path}$PATH_GAME/$GAME_IMAGE"
+						break;
+					fi
+				done
+				if [ -d "$image" ]; then
+					cat >> "$file" <<- EOF
+					mount d $GAME_IMAGE -t cdrom
+					EOF
+				else
+					cat >> "$file" <<- EOF
+					imgmount d $GAME_IMAGE -t cdrom
+					EOF
+				fi
 			;;
 			('iso'|*)
 				cat >> "$file" <<- EOF
